==> zlgopen/ametal/soc/stm/drivers/source/spi/am_stm32f103rbt6_spi_dma.c <==
#include "ametal.h"
#include "am_int.h"
#include "am_gpio.h"
#include "am_delay.h"
#include "am_clk.h"
#include "am_stm32f103rbt6_dma.h"
#include "hw/amhw_stm32f103rbt6_spi.h"
#include "am_stm32f103rbt6_spi_dma.h"
#define __SPI_FRQIIN_GET(p_hw_spi)    am_clk_rate_get(p_this->p_devinfo->clk_id)
#define __SPI_MAXSPEED_GET(p_hw_spi) (__SPI_FRQIIN_GET(p_hw_spi) / 2)
#define __SPI_MINSPEED_GET(p_hw_spi) (__SPI_FRQIIN_GET(p_hw_spi) / 256)
#define __SPI_ST_IDLE               0                   /**< \brief空闲状态 */
#define __SPI_ST_MSG_START          1                   /**< \brief消息开始 */
#define __SPI_ST_TRANS_START        2                   /**< \brief传输开始 */
#define __SPI_ST_DMA_TRANS_DATA     3                   /**< \briefDMA 传输 */
#define __SPI_EVT_NUM_GET(event)    ((event) & 0xFFFF)
#define __SPI_EVT_PAR_GET(event)    ((event >> 16) & 0xFFFF)
#define __SPI_EVT(evt_num, evt_par) (((evt_num) & 0xFFFF) | ((evt_par) << 16))
#define __SPI_EVT_NONE              __SPI_EVT(0, 0)     /**< \brief 无事件 */
#define __SPI_EVT_TRANS_LAUNCH      __SPI_EVT(1, 0)     /**< \brief 传输就绪 */
#define __SPI_EVT_DMA_TRANS_DATA    __SPI_EVT(2, 0)     /**< \brief DMA传输数据 */

am_local
int __spi_hard_init (am_stm32f103rbt6_spi_dma_dev_t *p_this)
{
    amhw_stm32f103rbt6_spi_t *p_hw_spi =
        (amhw_stm32f103rbt6_spi_t *)(p_this->p_devinfo->spi_reg_base);

    if (p_this == NULL) {
        return -AM_EINVAL;
    }

    /* NSS采用软件管理*/
    amhw_stm32f103rbt6_spi_ssm_enable(p_hw_spi);

    /* 关闭硬件SPI的NSS引脚输出*/
    amhw_stm32f103rbt6_spi_ssout_disable(p_hw_spi);

    /* 软件管理下，NSS内部为高，与引脚无关。特别注意，无论硬件、软件管理，配置成主机模式，NSS必须为高*/
    amhw_stm32f103rbt6_spi_ssi_set(p_hw_spi,AMHW_STM32F103RBT6_SPI_SSI_TO_NSS_ENABLE);

    /* 配置为主机模式 */
    amhw_stm32f103rbt6_spi_master_salver_set(p_hw_spi, AMHW_STM32F103RBT6_SPI_MASTER);

    /* 配置时钟相位和极性 */
    amhw_stm32f103rbt6_spi_clk_mode_set(p_hw_spi, AMHW_STM32F103RBT6_SPI_CLK_MODE_1 );

    /* 帧格式设置，先发送MSB*/
    amhw_stm32f103rbt6_spi_lsbfirst_set(p_hw_spi, AMHW_STM32F103RBT6_SPI_LSB_FIRST_SEND_MSB);

    /* 分频系数为64*/
    amhw_stm32f103rbt6_spi_baudratefre_set(p_hw_spi,
                                    AMHW_STM32F103RBT6_SPI_BAUDRATE_PRESCALER_128);

    /* 数据长度为8*/
    amhw_stm32f103rbt6_spi_data_length_set(p_hw_spi, AMHW_STM32F103RBT6_SPI_DATA_8BIT);

    /* SPI使能 */
    amhw_stm32f103rbt6_spi_enable(p_hw_spi);

    return AM_OK;
}

am_local
void __dma_isr (void *p_arg, uint32_t stat)
{
    am_stm32f103rbt6_spi_dma_dev_t *p_this   = (am_stm32f103rbt6_spi_dma_dev_t *)p_arg;

    /* 中断发生 */
    if (stat == AM_STM32F103RBT6_DMA_INT_NORMAL)
    {
        /* 记录成功传送字节数 */
        if (p_this->p_cur_trans->p_txbuf != NULL) {
            p_this->p_cur_msg->actual_length += (p_this->p_cur_trans->nbytes)
                            *(p_this->p_cur_spi_dev->bits_per_word < 9 ? 1 : 2);
        }
        if ((p_this != NULL) &&
            (p_this->p_isr_msg != NULL) &&
            (p_this->p_isr_msg->pfn_complete != NULL)) {
            p_this->p_isr_msg->pfn_complete(p_this->p_isr_msg->p_arg);
        }

        /* 片选关闭 */
        __spi_cs_off(p_this, p_this->p_cur_spi_dev);

        p_this->busy = AM_FALSE;

        /* 全速运行时，必要的延时，等待接收最后几个数据，否则会丢失最后几个数据*/
        am_udelay(100);

        /* 传输就绪 */
        __spi_mst_sm_event(p_this, __SPI_EVT_TRANS_LAUNCH);

    } else {
        /* 中断源不匹配 */
    }
}

am_local
int __spi_dma_trans (am_stm32f103rbt6_spi_dma_dev_t *p_dev)
{
    am_stm32f103rbt6_spi_dma_dev_t           *p_this      = (am_stm32f103rbt6_spi_dma_dev_t *)
                                                     p_dev;
    const am_stm32f103rbt6_spi_dma_devinfo_t *p_devinfo   = p_this->p_devinfo;
    amhw_stm32f103rbt6_spi_t                 *p_hw_spi    = (amhw_stm32f103rbt6_spi_t *)
                                                     (p_devinfo->spi_reg_base);
    am_spi_transfer_t                 *p_cur_trans = p_dev->p_cur_trans;

    const void     *p_txbuf      = NULL;
    static uint16_t tx_rx_trans  = 0;
    uint32_t        dma_flags[2] = {0};  /* DMA发送通道描述符 */

    /* 连接DMA中断服务函数 */
    am_stm32f103rbt6_dma_isr_connect(p_this->p_devinfo->dma_chan_tx, 
                           __dma_isr, 
                           (void *)p_this);

    am_int_enable(p_dev->p_devinfo->inum);

    /* DMA发送通道配置 */
    dma_flags[0] =  AMHW_STM32F103RBT6_DMA_CHAN_PRIORITY_HIGH         |  /* 中断优先级 高 */
                    AMHW_STM32F103RBT6_DMA_CHAN_MEM_SIZE_8BIT         |  /* 内存数据宽度1字节 */
                    AMHW_STM32F103RBT6_DMA_CHAN_PER_SIZE_8BIT         |  /* 外设数据宽度1字节 */
                    AMHW_STM32F103RBT6_DMA_CHAN_PER_ADD_INC_DISABLE   |  /* 外设地址不自增 */
                    AMHW_STM32F103RBT6_DMA_CHAN_CIRCULAR_MODE_DISABLE ;  /* 关闭循环模式 */

    /* DMA接收通道配置 */
    dma_flags[1] = AMHW_STM32F103RBT6_DMA_CHAN_PRIORITY_HIGH         |  /* 中断优先级 高 */
                   AMHW_STM32F103RBT6_DMA_CHAN_MEM_SIZE_8BIT         |  /* 内存数据宽度1字节 */
                   AMHW_STM32F103RBT6_DMA_CHAN_PER_SIZE_8BIT         |  /* 外设数据宽度1字节 */
                   AMHW_STM32F103RBT6_DMA_CHAN_PER_ADD_INC_DISABLE   |  /* 外设地址不自增 */
                   AMHW_STM32F103RBT6_DMA_CHAN_CIRCULAR_MODE_DISABLE ;  /* 关闭循环模式 */

    /* 设置DMA数据位宽 */
    if (p_cur_trans->bits_per_word > 8) {
        dma_flags[0] |= AMHW_STM32F103RBT6_DMA_CHAN_MEM_SIZE_16BIT;
        dma_flags[0] |= AMHW_STM32F103RBT6_DMA_CHAN_PER_SIZE_16BIT;
        dma_flags[1] |= AMHW_STM32F103RBT6_DMA_CHAN_MEM_SIZE_16BIT;
        dma_flags[1] |= AMHW_STM32F103RBT6_DMA_CHAN_PER_SIZE_16BIT;
    } else {
        dma_flags[0] |= AMHW_STM32F103RBT6_DMA_CHAN_MEM_SIZE_8BIT;
        dma_flags[0] |= AMHW_STM32F103RBT6_DMA_CHAN_PER_SIZE_8BIT;
        dma_flags[1] |= AMHW_STM32F103RBT6_DMA_CHAN_MEM_SIZE_8BIT;
        dma_flags[1] |= AMHW_STM32F103RBT6_DMA_CHAN_PER_SIZE_8BIT;
    }

    /* 只发送不接收数据 */
    if (p_cur_trans->p_rxbuf == NULL) {

        /* 内存地址不自增 */
        dma_flags[1] |= AMHW_STM32F103RBT6_DMA_CHAN_MEM_ADD_INC_DISABLE;

        /* 建立接收通道描述符 */
        am_stm32f103rbt6_dma_xfer_desc_build(&(p_this->g_desc[1]),        /* 通道描述符 */
                                    (uint32_t)(&(p_hw_spi->dr)),/* 源缓冲区首地址 */
                                    (uint32_t)(&tx_rx_trans),   /* 目的缓冲区首地址 */
                                     p_cur_trans->nbytes,       /* 传输字节数 */
                                     dma_flags[1]);             /* 传输配置 */

    /* 存在接收数据 */
    } else {

        /* 内存地址自增 */
        dma_flags[1] |= AMHW_STM32F103RBT6_DMA_CHAN_MEM_ADD_INC_ENABLE;

        /* 建立接收通道描述符 */ 
        am_stm32f103rbt6_dma_xfer_desc_build(&(p_this->g_desc[1]),         /* 通道描述符 */
                                    (uint32_t)(&(p_hw_spi->dr)), /* 源缓冲区首地址 */
                                    (uint32_t)(p_cur_trans->p_rxbuf),
                                     p_cur_trans->nbytes,        /* 传输字节数 */
                                     dma_flags[1]);              /* 传输配置 */
    }

    if (p_cur_trans->p_txbuf == NULL) {

        tx_rx_trans = 0;
        p_txbuf = &tx_rx_trans;

        /* 内存地址不自增 */
        dma_flags[0] |= AMHW_STM32F103RBT6_DMA_CHAN_MEM_ADD_INC_DISABLE;

        /* 建立发送通道描述符 */
        am_stm32f103rbt6_dma_xfer_desc_build(&(p_this->g_desc[0]),        /* 通道描述符 */
                                    (uint32_t)(p_txbuf),        /* 源缓冲区首地址 */
                                    (uint32_t)(&(p_hw_spi->dr)),/* 目的缓冲区首地址 */
                                    p_cur_trans->nbytes,        /* 传输字节数 */
                                    dma_flags[0]);              /* 传输配置 */
    } else {
        p_txbuf = p_cur_trans->p_txbuf;

        /* 内存地址自增 */
        dma_flags[0] |= AMHW_STM32F103RBT6_DMA_CHAN_MEM_ADD_INC_ENABLE;

        /* 建立发送通道描述符 */
        am_stm32f103rbt6_dma_xfer_desc_build(&(p_this->g_desc[0]),        /* 通道描述符 */
                                    (uint32_t)((uint8_t *)p_txbuf),
                                    (uint32_t)(&(p_hw_spi->dr)),/* 目的缓冲区首地址 */
                                    p_cur_trans->nbytes,        /* 传输字节数 */
                                    dma_flags[0]);              /* 传输配置 */
    }

    if (am_stm32f103rbt6_dma_xfer_desc_chan_cfg(&(p_this->g_desc[0]),
                                        AMHW_STM32F103RBT6_DMA_MER_TO_PER,  /* 内存到外设 */
                                        p_this->p_devinfo->dma_chan_tx) ==
                                        AM_ERROR) {
        return AM_ERROR;
    }

    if (am_stm32f103rbt6_dma_xfer_desc_chan_cfg(&(p_this->g_desc[1]),
                                        AMHW_STM32F103RBT6_DMA_PER_TO_MER,  /* 外设到内存 */
                                        p_this->p_devinfo->dma_chan_rx) ==
                                        AM_ERROR) {
        return AM_ERROR;
    }

    am_stm32f103rbt6_dma_chan_start(p_this->p_devinfo->dma_chan_rx);
    am_stm32f103rbt6_dma_chan_start(p_this->p_devinfo->dma_chan_tx);

    return AM_OK;
}

am_local
int __spi_config (am_stm32f103rbt6_spi_dma_dev_t *p_this)
{
    const am_stm32f103rbt6_spi_dma_devinfo_t *p_devinfo = p_this->p_devinfo;
    amhw_stm32f103rbt6_spi_t              *p_hw_spi     = (amhw_stm32f103rbt6_spi_t *)
                                                   (p_devinfo->spi_reg_base);
    am_spi_transfer_t              *p_trans      = p_this->p_cur_trans;

    uint32_t  mode_flag = 0;

    /* 如果为0，使用默认参数值 */
    if (p_trans->bits_per_word == 0) {
        p_trans->bits_per_word = p_this->p_cur_spi_dev->bits_per_word;
    }

    if (p_trans->speed_hz == 0) {
        p_trans->speed_hz = p_this->p_cur_spi_dev->max_speed_hz;
    }

    /* 设置字节数有效性检查 */
    if (p_trans->bits_per_word > 32 || p_trans->bits_per_word < 1) {
        return -AM_EINVAL;
    }

    /* 设置分频值有效性检查 */
    if (p_trans->speed_hz > __SPI_MAXSPEED_GET(p_hw_spi) ||
        p_trans->speed_hz < __SPI_MINSPEED_GET(p_hw_spi)) {
        return -AM_EINVAL;
    }

    /* 发送和接收缓冲区有效性检查 */
    if ((p_trans->p_txbuf == NULL) && (p_trans->p_rxbuf == NULL)) {
        return -AM_EINVAL;
    }

    /* 发送字节数检查 */
    if (p_trans->nbytes == 0) {
        return -AM_ELOW;
    }

    /**
     * 配置当前设备模式
     */
    mode_flag = 0;

    if (p_this->p_cur_spi_dev->mode & AM_SPI_LSB_FIRST) {
        mode_flag |= AMHW_STM32F103RBT6_SPI_LSB_FIRST_SEND_LSB;
    }

    amhw_stm32f103rbt6_spi_disable(p_hw_spi);

    /* NSS采用软件管理*/
    amhw_stm32f103rbt6_spi_ssm_enable(p_hw_spi);

    /* 关闭硬件SPI的NSS引脚输出*/
    amhw_stm32f103rbt6_spi_ssout_disable(p_hw_spi);

    /* 软件管理下，NSS内部为高，与引脚无关。特别注意，无论硬件、软件管理，配置成主机模式，NSS必须为高*/
    amhw_stm32f103rbt6_spi_ssi_set(p_hw_spi,AMHW_STM32F103RBT6_SPI_SSI_TO_NSS_ENABLE);

    /* 配置为主机模式 */
    amhw_stm32f103rbt6_spi_master_salver_set(p_hw_spi, AMHW_STM32F103RBT6_SPI_MASTER);

    /* 配置SPI模式（时钟相位和极性） */
    amhw_stm32f103rbt6_spi_clk_mode_set(p_hw_spi, 0x3 & p_this->p_cur_spi_dev->mode);

    /* 配置SPI工作特性 */
    amhw_stm32f103rbt6_spi_lsbfirst_set(p_hw_spi, mode_flag);

    amhw_stm32f103rbt6_spi_data_length_set(p_hw_spi, AMHW_STM32F103RBT6_SPI_DATA_8BIT);

    /* 配置SPI数据长度和帧格式 */
    if (p_this->p_cur_spi_dev->bits_per_word == 8) {
        amhw_stm32f103rbt6_spi_lsbfirst_set(p_hw_spi, mode_flag);
        amhw_stm32f103rbt6_spi_data_length_set(p_hw_spi, AMHW_STM32F103RBT6_SPI_DATA_8BIT);
    }
    else if (p_this->p_cur_spi_dev->bits_per_word == 16) {
        amhw_stm32f103rbt6_spi_lsbfirst_set(p_hw_spi, mode_flag);
        amhw_stm32f103rbt6_spi_data_length_set(p_hw_spi, AMHW_STM32F103RBT6_SPI_DATA_16BIT);
    }
    else if ((p_this->p_cur_spi_dev->bits_per_word >= 1) ||
             (p_this->p_cur_spi_dev->bits_per_word <= 32)) {
        amhw_stm32f103rbt6_spi_lsbfirst_set(p_hw_spi, mode_flag);
        amhw_stm32f103rbt6_spi_flex_length_set(p_hw_spi,
                                        p_this->p_cur_spi_dev->bits_per_word);
        amhw_stm32f103rbt6_spi_flexlength_enable(p_hw_spi);
    }
    else {
        amhw_stm32f103rbt6_spi_lsbfirst_set(p_hw_spi, mode_flag);
        amhw_stm32f103rbt6_spi_data_length_set(p_hw_spi, AMHW_STM32F103RBT6_SPI_DATA_8BIT);
    }

    /* 设置SPI速率 */
    amhw_stm32f103rbt6_spi_baudratefre_set(p_hw_spi, p_this->p_devinfo->baud_div);

    amhw_stm32f103rbt6_spi_enable(p_hw_spi);

    return AM_OK;
}
