==> zlgopen/ametal/soc/mm32/drivers/source/spi/am_mm32_spi_dma.c <==
#include "ametal.h"
#include "am_int.h"
#include "am_gpio.h"
#include "am_clk.h"
#include "am_mm32_dma.h"
#include "hw/amhw_mm32_spi.h"
#include "am_mm32_spi_dma.h"
#define __SPI_FRQIIN_GET(p_hw_spi)    am_clk_rate_get(p_this->p_devinfo->clk_id)
#define __SPI_MAXSPEED_GET(p_hw_spi) (__SPI_FRQIIN_GET(p_hw_spi) / 2)
#define __SPI_MINSPEED_GET(p_hw_spi) (__SPI_FRQIIN_GET(p_hw_spi) / 4096)
#define __SPI_ST_IDLE               0                   /**< \brief空闲状态 */
#define __SPI_ST_MSG_START          1                   /**< \brief消息开始 */
#define __SPI_ST_TRANS_START        2                   /**< \brief传输开始 */
#define __SPI_ST_DMA_TRANS_DATA     3                   /**< \briefDMA 传输 */
#define __SPI_EVT_NUM_GET(event)    ((event) & 0xFFFF)
#define __SPI_EVT_PAR_GET(event)    ((event >> 16) & 0xFFFF)
#define __SPI_EVT(evt_num, evt_par) (((evt_num) & 0xFFFF) | ((evt_par) << 16))
#define __SPI_EVT_NONE              __SPI_EVT(0, 0)     /**< \brief 无事件 */
#define __SPI_EVT_TRANS_LAUNCH      __SPI_EVT(1, 0)     /**< \brief 传输就绪 */
#define __SPI_EVT_DMA_TRANS_DATA    __SPI_EVT(2, 0)     /**< \brief DMA传输数据 */

am_local
int __spi_hard_init (am_mm32_spi_dma_dev_t *p_this)
{
    amhw_mm32_spi_t *p_hw_spi = (amhw_mm32_spi_t *)(p_this->p_devinfo->spi_reg_base);

    if (p_this == NULL) {
        return -AM_EINVAL;
    }

    /* 初始化配置SPI */
    amhw_mm32_spi_mode_sel(p_hw_spi, AMHW_MM32_SPI_MODE_MASTER);
    amhw_mm32_spi_dma_enable(p_hw_spi, AM_TRUE);
    amhw_mm32_spi_tx_enable(p_hw_spi, AM_TRUE);
    amhw_mm32_spi_rx_enable(p_hw_spi, AM_TRUE);
    amhw_mm32_spi_module_enable(p_hw_spi, AM_TRUE);

    amhw_mm32_spi_int_open(p_hw_spi, AM_TRUE);
    amhw_mm32_spi_int_enable(p_hw_spi, AMHW_MM32_SPI_INTSTAT_TXEPT_FALG);

    return AM_OK;
}

am_local
void __dma_isr (void *p_arg, uint32_t stat)
{
    am_mm32_spi_dma_dev_t *p_this   = (am_mm32_spi_dma_dev_t *)p_arg;

    /* 中断发生 */
    if (stat == AM_MM32_DMA_INT_NORMAL)
    {
        /* 记录成功传送字节数 */
        if (p_this->p_cur_trans->p_txbuf != NULL) {
            p_this->p_cur_msg->actual_length += (p_this->p_cur_trans->nbytes)
                            *(p_this->p_cur_spi_dev->bits_per_word < 9 ? 1 : 2);
        }

        /* 传输就绪 */
        __spi_mst_sm_event(p_this, __SPI_EVT_TRANS_LAUNCH);

    } else {
        /* 中断源不匹配 */
    }
}

am_local
int __spi_dma_trans (am_mm32_spi_dma_dev_t *p_dev)
{
    am_mm32_spi_dma_dev_t           *p_this      = (am_mm32_spi_dma_dev_t *)p_dev;
    const am_mm32_spi_dma_devinfo_t *p_devinfo   = p_this->p_devinfo;
    amhw_mm32_spi_t                 *p_hw_spi    = (amhw_mm32_spi_t *)(p_devinfo->spi_reg_base);
    am_spi_transfer_t              *p_cur_trans = p_dev->p_cur_trans;

    const void     *p_txbuf     = NULL;
    static uint16_t tx_rx_trans = 0; 
    uint32_t   dma_flags[2]     = {0};  /* DMA发送通道描述符 */

    /* 连接DMA中断服务函数 */
    am_mm32_dma_isr_connect(p_this->p_devinfo->dma_chan_tx, 
                           __dma_isr, 
                           (void *)p_this);

    /* DMA发送通道配置 */
    dma_flags[0] =  AMHW_MM32_DMA_CHAN_PRIORITY_HIGH         |  /* 中断优先级 高 */
                    AMHW_MM32_DMA_CHAN_MEM_SIZE_8BIT         |  /* 内存数据宽度1字节 */
                    AMHW_MM32_DMA_CHAN_PER_SIZE_8BIT         |  /* 外设数据宽度1字节 */
                    AMHW_MM32_DMA_CHAN_PER_ADD_INC_DISABLE   |  /* 外设地址自增 */
                    AMHW_MM32_DMA_CHAN_CIRCULAR_MODE_DISABLE ;  /* 关闭循环模式 */

    /* DMA接收通道配置 */
    dma_flags[1] = AMHW_MM32_DMA_CHAN_PRIORITY_HIGH         |  /* 中断优先级 高 */
                   AMHW_MM32_DMA_CHAN_MEM_SIZE_8BIT         |  /* 内存数据宽度1字节 */
                   AMHW_MM32_DMA_CHAN_PER_SIZE_8BIT         |  /* 外设数据宽度1字节 */
                   AMHW_MM32_DMA_CHAN_PER_ADD_INC_DISABLE   |  /* 外设地址自增 */
                   AMHW_MM32_DMA_CHAN_CIRCULAR_MODE_DISABLE ;  /* 关闭循环模式 */

    /* 设置DMA数据位宽 */
    if (p_cur_trans->bits_per_word > 8) {
        dma_flags[0] |= AMHW_MM32_DMA_CHAN_MEM_SIZE_8BIT;
        dma_flags[0] |= AMHW_MM32_DMA_CHAN_PER_SIZE_8BIT;
        dma_flags[1] |= AMHW_MM32_DMA_CHAN_MEM_SIZE_8BIT;
        dma_flags[1] |= AMHW_MM32_DMA_CHAN_PER_SIZE_8BIT;
    } else {
        dma_flags[0] |= AMHW_MM32_DMA_CHAN_MEM_SIZE_8BIT;
        dma_flags[0] |= AMHW_MM32_DMA_CHAN_PER_SIZE_8BIT;
        dma_flags[1] |= AMHW_MM32_DMA_CHAN_MEM_SIZE_8BIT;
        dma_flags[1] |= AMHW_MM32_DMA_CHAN_PER_SIZE_8BIT;
    }

    /* 只发送不接收数据 */
    if (p_cur_trans->p_rxbuf == NULL) {

        /* 内存地址不自增 */
        dma_flags[1] |= AMHW_MM32_DMA_CHAN_MEM_ADD_INC_DISABLE;

        /* 建立接收通道描述符 */
        am_mm32_dma_xfer_desc_build(&(p_this->g_desc[1]),            /* 通道描述符 */
                                    (uint32_t)(&(p_hw_spi->rxreg)), /* 源缓冲区首地址 */
                                    (uint32_t)(&tx_rx_trans),       /* 目的缓冲区首地址 */
                                     p_cur_trans->nbytes,           /* 传输字节数 */
                                     dma_flags[1]);                 /* 传输配置 */

    /* 存在接收数据 */
    } else {

        /* 内存地址自增 */
        dma_flags[1] |= AMHW_MM32_DMA_CHAN_MEM_ADD_INC_ENABLE;

        /* 建立接收通道描述符 */ 
        am_mm32_dma_xfer_desc_build(&(p_this->g_desc[1]),              /* 通道描述符 */
                                    (uint32_t)(&(p_hw_spi->rxreg)),   /* 源缓冲区首地址 */
                                    (uint32_t)(p_cur_trans->p_rxbuf), /* 目的缓冲区首地址 */
                                     p_cur_trans->nbytes,             /* 传输字节数 */
                                     dma_flags[1]);                   /* 传输配置 */
    }

    if (p_cur_trans->p_txbuf == NULL) {

        tx_rx_trans = 0;
        p_txbuf = &tx_rx_trans;

        /* 内存地址不自增 */
        dma_flags[0] |= AMHW_MM32_DMA_CHAN_MEM_ADD_INC_DISABLE;

        /* 建立发送通道描述符 */
        am_mm32_dma_xfer_desc_build(&(p_this->g_desc[0]),             /* 通道描述符 */
                                    (uint32_t)(p_txbuf),             /* 源缓冲区首地址 */
                                    (uint32_t)(&(p_hw_spi->txreg)),  /* 目的缓冲区首地址 */
                                    p_cur_trans->nbytes,             /* 传输字节数 */
                                    dma_flags[0]);                   /* 传输配置 */
    } else {
        p_txbuf = p_cur_trans->p_txbuf;

        /* 内存地址自增 */
        dma_flags[0] |= AMHW_MM32_DMA_CHAN_MEM_ADD_INC_ENABLE;

        /* 建立发送通道描述符 */
        am_mm32_dma_xfer_desc_build(&(p_this->g_desc[0]),             /* 通道描述符 */
                                    (uint32_t)((uint8_t *)p_txbuf),  /* 源缓冲区首地址 */
                                    (uint32_t)(&(p_hw_spi->txreg)),  /* 目的缓冲区首地址 */
                                    p_cur_trans->nbytes,             /* 传输字节数 */
                                    dma_flags[0]);                   /* 传输配置 */
    }

    if (am_mm32_dma_xfer_desc_chan_cfg(&(p_this->g_desc[0]),
                                        AMHW_MM32_DMA_MER_TO_PER,  /* 内存到外设 */
                                        p_this->p_devinfo->dma_chan_tx) == AM_ERROR) {
        return AM_ERROR;
    }

    if (am_mm32_dma_xfer_desc_chan_cfg(&(p_this->g_desc[1]),
                                        AMHW_MM32_DMA_PER_TO_MER,  /* 外设到内存 */
                                        p_this->p_devinfo->dma_chan_rx) == AM_ERROR) {
        return AM_ERROR;
    }

    am_mm32_dma_chan_start(p_this->p_devinfo->dma_chan_rx);
    am_mm32_dma_chan_start(p_this->p_devinfo->dma_chan_tx);

    return AM_OK;
}

am_local
int __spi_config (am_mm32_spi_dma_dev_t *p_this)
{
    const am_mm32_spi_dma_devinfo_t *p_devinfo = p_this->p_devinfo;
    amhw_mm32_spi_t                 *p_hw_spi  = (amhw_mm32_spi_t *)(p_devinfo->spi_reg_base);
    am_spi_transfer_t              *p_trans   = p_this->p_cur_trans;

    uint32_t  mode_flag = 0;

    /* 如果为0，使用默认参数值 */
    if (p_trans->bits_per_word == 0) {
        p_trans->bits_per_word = p_this->p_cur_spi_dev->bits_per_word;
    }

    if (p_trans->speed_hz == 0) {
        p_trans->speed_hz = p_this->p_cur_spi_dev->max_speed_hz;
    }

    /* 设置字节数有效性检查 */
    if (p_trans->bits_per_word > 32 || p_trans->bits_per_word < 1) {
        return -AM_EINVAL;
    }

    /* 设置分频值有效性检查 */
    if (p_trans->speed_hz > __SPI_MAXSPEED_GET(p_hw_spi) ||
        p_trans->speed_hz < __SPI_MINSPEED_GET(p_hw_spi)) {
        return -AM_EINVAL;
    }

    /* 发送和接收缓冲区有效性检查 */
    if ((p_trans->p_txbuf == NULL) && (p_trans->p_rxbuf == NULL)) {
        return -AM_EINVAL;
    }

    /* 发送字节数检查 */
    if (p_trans->nbytes == 0) {
        return -AM_ELOW;
    }

    /**
     * 配置当前设备模式
     */
    mode_flag = 0;

    if (p_this->p_cur_spi_dev->mode & AM_SPI_LSB_FIRST) {
        mode_flag |= AMHW_MM32_SPI_DATA_LSB;
    }

    /* 配置SPI模式（时钟相位和极性） */
    amhw_mm32_spi_clk_mode_set(p_hw_spi, (0x3 & p_this->p_cur_spi_dev->mode) ^ 0x01);

    /* 配置SPI工作特性 */
    amhw_mm32_spi_first_bit_sel(p_hw_spi, (1u << 2) & mode_flag);

    amhw_mm32_spi_data_len_sel(p_hw_spi, AMHW_MM32_SPI_DATA_LEN_8BIT);

    /* 配置为主机模式 */
    amhw_mm32_spi_mode_sel(p_hw_spi, AMHW_MM32_SPI_MODE_MASTER);

    if (p_this->p_cur_spi_dev->bits_per_word > 8) {
        amhw_mm32_spi_valid_data_sel(p_hw_spi, AMHW_MM32_SPI_VALID_DATA_32BIT);
        amhw_mm32_spi_first_bit_sel(p_hw_spi, AMHW_MM32_SPI_DATA_LSB);
        if (p_this->p_cur_spi_dev->bits_per_word == 32) {
            amhw_mm32_spi_extlen_set(p_hw_spi, 0);
        } else {
            amhw_mm32_spi_extlen_set(p_hw_spi, p_this->p_cur_spi_dev->bits_per_word);
        }
    }

    if (p_trans->speed_hz > (72000000 / 5)) {
        /* 高速 */
        amhw_mm32_spi_tx_data_edge_sel(p_hw_spi, AMHW_MM32_SPI_TX_DATA_IMMEDIATELY);
        amhw_mm32_spi_rx_data_edge_sel(p_hw_spi, AMHW_MM32_SPI_RX_DATA_LAST_CLOCK);

    } else {

        /* 低速 */
        amhw_mm32_spi_tx_data_edge_sel(p_hw_spi, AMHW_MM32_SPI_TX_DATA_ONE_CLOCK);
        amhw_mm32_spi_rx_data_edge_sel(p_hw_spi, AMHW_MM32_SPI_RX_DATA_MID_CLOCK);
    }

    /* 设置SPI速率 */
    __spi_speed_cfg(p_this, p_trans->speed_hz);

    return AM_OK;
}
